# gpusim

./: CMakeLists.txt  README.md  alldistributions  betar20.csv  betar200.csv  betar20501.csv  distributions.txt  distributions1.txt  gpunorta.c  gpunorta.cu  makefile  seqtest.cpp  test_corr_matrix_d=20.txt  test_corr_matrix_d=200.txt  timingdata.csv
src/: .cudaFuncs.cu.swp  .gpunorta.cu.swp  cudaFuncs.cu  cudaFuncs.h  gpunorta.cu  gpunorta_cli.cu  gpunorta_ui.cu  statslib.cpp  statslib.h  ui.cu.cpp
